--- a/example.conf
+++ b/example.conf
@@ -12,3 +12,13 @@
  name: show my ip
  cmd: 'curl http://ip.cn'
  alias: ip
+-
+ name: command with parameters
+ cmd: echo 'hello {{who}}'
+ alias: hi
+ options:
+  who: 
+   - name: best friend
+     val: Andy
+   - name: neighbour
+     val: Jack
