--- a/example.conf
+++ b/example.conf
@@ -18,7 +18,7 @@
  alias: hi
  options:
   who: 
-   - name: best friend
-     val: Andy
-   - name: neighbour
-     val: Jack
+   - val: Andy
+     desc: Best friend
+   - val: Jack
+     desc: Neighbour
